--- a/logdemo/src/main/resources/application.yaml
+++ b/logdemo/src/main/resources/application.yaml
@@ -18,6 +18,7 @@ server:
 
 #方式二
 #注意要配置好生产环境，不然一个日志都不会打印出来
+#需要注意logback-spring.xml放置的位置，当我们创建的是有父工程、子工程时，最好将配置文件放在所有工程都依赖的那个工程中，不然可能会失效
 spring:
   profiles:
     active: dev
